crates/ty_python_types/resources/mdtest/snapshots/legacy_typevars.md_-_Legacy_typevar_creat…_-_Must_have_a_name_(79a4ce09338e666b).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: legacy_typevars.md - Legacy typevar creation diagnostics - Must have a name
mdtest path: crates/ty_python_types/resources/mdtest/diagnostics/legacy_typevars.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import TypeVar
2 | 
3 | # error: [invalid-legacy-type-variable]
4 | T = TypeVar()
```

# Diagnostics

```
error[invalid-legacy-type-variable]: The `name` parameter of `TypeVar` is required.
 --> src/mdtest_snippet.py:4:5
  |
3 | # error: [invalid-legacy-type-variable]
4 | T = TypeVar()
  |     ^^^^^^^^^
  |
info: rule `invalid-legacy-type-variable` is enabled by default

```
